--- a/Nutri-Facil/Código-Principal/index.html
+++ b/Nutri-Facil/Código-Principal/index.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calculadora de Dieta Saudável</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <!-- Fundo com imagens temáticas -->
+  <div class="background-container">
+    <div class="background-overlay"></div>
+    <div class="background-image gym-equipment"></div>
+    <div class="background-image running-people"></div>
+    <div class="background-image healthy-food"></div>
+  </div>
 
+  <!-- Conteúdo principal -->
+  <div class="main-content">
+    <div class="container py-5">
+      <div class="calculator-card">
+        <h1 class="mb-4 text-center">Calculadora de Dieta</h1>
+        <form id="form">
+          <div class="row g-3">
+            <div class="col-md-4">
+              <label for="dieta" class="form-label">Dieta</label>
+              <select id="dieta" class="form-select" required>
+                <option value="Mediterrânea">Mediterrânea</option>
+                <option value="Low Carb">Low Carb</option>
+                <option value="Cetogênica">Cetogênica</option>
+                <option value="Vegetariana">Vegetariana</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label for="peso" class="form-label">Peso (kg)</label>
+              <input type="number" class="form-control" id="peso" required>
+            </div>
+            <div class="col-md-4">
+              <label for="altura" class="form-label">Altura (cm)</label>
+              <input type="number" class="form-control" id="altura" required>
+            </div>
+            <div class="col-md-4">
+              <label for="idade" class="form-label">Idade (anos)</label>
+              <input type="number" class="form-control" id="idade" required>
+            </div>
+            <div class="col-md-4">
+              <label for="sexo" class="form-label">Sexo</label>
+              <select id="sexo" class="form-select" required>
+                <option value="Masculino">Masculino</option>
+                <option value="Feminino">Feminino</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label for="objetivo" class="form-label">Objetivo</label>
+              <select id="objetivo" class="form-select" required>
+                <option>Emagrecimento</option>
+                <option>Hipertrofia</option>
+              </select>
+            </div>
+            <div class="col-md-12">
+              <label for="preferencias" class="form-label">Preferência de Alimentos</label>
+              <input type="text" class="form-control" id="preferencias" placeholder="Ex: Frango, Brócolis, Batata doce" required>
+            </div>
+            <div class="col-md-6">
+              <label for="alergias" class="form-label">Alergias/Intolerâncias</label>
+              <select id="alergias" class="form-select">
+                <option>Nenhuma</option>
+                <option>Lactose</option>
+                <option>Glúten</option>
+                <option>Proteína do leite</option>
+                <option>Ovo</option>
+                <option>Frutos do mar</option>
+              </select>
+            </div>
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary btn-calculate">Calcular Dieta</button>
+            </div>
+          </div>
+        </form>
+
+        <div class="mt-5" id="resultado"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Rodapé motivacional -->
+  <footer class="motivational-footer">
+    <div class="container text-center">
+      <p class="motivational-quote">"Sua saúde é um investimento, não uma despesa."</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
