--- a/Nutri-Facil/Código-Principal/index.html
+++ b/Nutri-Facil/Código-Principal/index.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Calculadora de Dieta Saudável</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  
+  <!-- SDK Mercado Pago -->
+  <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 <body>
   <!-- Fundo com imagens temáticas -->
@@ -24,47 +28,67 @@
     <div class="container py-5">
       <div class="calculator-card">
         <h1 class="mb-4 text-center">Calculadora de Dieta</h1>
-        <form id="form">
+        <form id="diet-form">
           <div class="row g-3">
             <div class="col-md-4">
               <label for="dieta" class="form-label">Dieta</label>
-              <select id="dieta" class="form-select" required>
+              <select class="form-control" id="dieta" required>
+                <option value="" disabled selected>Selecione sua dieta</option>
                 <option value="Mediterrânea">Mediterrânea</option>
                 <option value="Low Carb">Low Carb</option>
                 <option value="Cetogênica">Cetogênica</option>
                 <option value="Vegetariana">Vegetariana</option>
               </select>
             </div>
+
             <div class="col-md-4">
               <label for="peso" class="form-label">Peso (kg)</label>
-              <input type="number" class="form-control" id="peso" required>
+              <input type="number" class="form-control" id="peso" required min="30" max="300">
             </div>
+
             <div class="col-md-4">
               <label for="altura" class="form-label">Altura (cm)</label>
-              <input type="number" class="form-control" id="altura" required>
+              <input type="number" class="form-control" id="altura" required min="100" max="250">
             </div>
+
             <div class="col-md-4">
               <label for="idade" class="form-label">Idade (anos)</label>
-              <input type="number" class="form-control" id="idade" required>
+              <input type="number" class="form-control" id="idade" required min="12" max="120">
             </div>
+
             <div class="col-md-4">
               <label for="sexo" class="form-label">Sexo</label>
-              <select id="sexo" class="form-select" required>
+              <select class="form-control" id="sexo" required>
+                <option value="" disabled selected>Selecione seu sexo</option>
                 <option value="Masculino">Masculino</option>
                 <option value="Feminino">Feminino</option>
               </select>
             </div>
+
             <div class="col-md-4">
               <label for="objetivo" class="form-label">Objetivo</label>
-              <select id="objetivo" class="form-select" required>
-                <option>Emagrecimento</option>
-                <option>Hipertrofia</option>
+              <select class="form-control" id="objetivo" required>
+                <option value="" disabled selected>Selecione seu objetivo</option>
+                <option value="Emagrecimento">Emagrecimento</option>
+                <option value="Hipertrofia">Hipertrofia (ganho de massa muscular)</option>
               </select>
             </div>
+
+            <div class="col-md-4">
+              <label for="nivel" class="form-label">Nível de condicionamento físico:</label>
+              <select class="form-control" id="nivel" required>
+                <option value="" disabled selected>Selecione seu nível</option>
+                <option value="Iniciante">Iniciante (0-6 meses de treino)</option>
+                <option value="Intermediario">Intermediário (6 meses - 2 anos)</option>
+                <option value="Avancado">Avançado (+2 anos de treino)</option>
+              </select>
+            </div>
+
             <div class="col-md-12">
               <label for="preferencias" class="form-label">Preferência de Alimentos</label>
               <input type="text" class="form-control" id="preferencias" placeholder="Ex: Frango, Brócolis, Batata doce" required>
             </div>
+
             <div class="col-md-6">
               <label for="alergias" class="form-label">Alergias/Intolerâncias</label>
               <select id="alergias" class="form-select">
@@ -76,8 +100,11 @@
                 <option>Frutos do mar</option>
               </select>
             </div>
+            
             <div class="col-12">
-              <button type="submit" class="btn btn-primary btn-calculate">Calcular Dieta</button>
+              <button type="submit" class="btn btn-primary btn-calculate">
+                <i class="fas fa-calculator me-2"></i>Calcular Dieta
+              </button>
             </div>
           </div>
         </form>
@@ -87,13 +114,104 @@
     </div>
   </div>
 
+  <!-- Seção de Planos Premium -->
+  <section id="premium-plans" class="container my-5">
+    <h2 class="text-center mb-4">Planos Premium</h2>
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <div class="card-header bg-primary text-white">
+            <h3 class="card-title">Básico</h3>
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h4 class="card-title pricing-card-title">R$ 15<small class="text-muted">/mês</small></h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li><i class="fas fa-check text-success me-2"></i>Receitas personalizadas ilimitadas</li>
+              <li><i class="fas fa-check text-success me-2"></i>Plano de treino básico</li>
+              <li><i class="fas fa-check text-success me-2"></i>Acompanhamento de progresso</li>
+              <li><i class="fas fa-check text-success me-2"></i>Suporte por email</li>
+            </ul>
+            <button class="btn btn-lg btn-block btn-primary subscribe-btn mt-auto" data-plan="basic">Assinar</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <div class="card-header bg-success text-white">
+            <h3 class="card-title">Avançado</h3>
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h4 class="card-title pricing-card-title">R$ 25<small class="text-muted">/mês</small></h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li><i class="fas fa-check text-success me-2"></i>Todos os benefícios do Básico</li>
+              <li><i class="fas fa-check text-success me-2"></i>Plano de treino personalizado</li>
+              <li><i class="fas fa-check text-success me-2"></i>Acesso a nutricionistas</li>
+              <li><i class="fas fa-check text-success me-2"></i>Suporte prioritário</li>
+            </ul>
+            <button class="btn btn-lg btn-block btn-success subscribe-btn mt-auto" data-plan="advanced">Assinar</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <div class="card-header bg-dark text-white">
+            <h3 class="card-title">Família</h3>
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h4 class="card-title pricing-card-title">R$ 30<small class="text-muted">/mês</small></h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li><i class="fas fa-check text-success me-2"></i>Todos os benefícios do Avançado</li>
+              <li><i class="fas fa-check text-success me-2"></i>Até 5 perfis familiares</li>
+              <li><i class="fas fa-check text-success me-2"></i>Planos de refeições familiares</li>
+              <li><i class="fas fa-check text-success me-2"></i>Descontos em parceiros</li>
+            </ul>
+            <button class="btn btn-lg btn-block btn-dark subscribe-btn mt-auto" data-plan="family">Assinar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <!-- Modal para o checkout -->
+  <div class="modal fade" id="checkoutModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Finalizar Assinatura</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-md-6">
+              <h5>Resumo do Plano</h5>
+              <div id="plan-summary"></div>
+            </div>
+            <div class="col-md-6">
+              <div id="payment-form" class="p-3 border rounded"></div>
+              <div id="payment-status" class="mt-3"></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Rodapé motivacional -->
-  <footer class="motivational-footer">
+  <footer class="motivational-footer py-3 mt-5">
     <div class="container text-center">
-      <p class="motivational-quote">"Sua saúde é um investimento, não uma despesa."</p>
+      <p class="motivational-quote mb-0">"Sua saúde é um investimento, não uma despesa."</p>
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/exercises.js"></script>
+  <script src="js/recipes.js"></script>
+  <script src="js/calculator.js"></script>
+  <script src="js/mercadoPago.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
