--- a/Nutri-Facil/Código-Principal/index.html
+++ b/Nutri-Facil/Código-Principal/index.html
@@ -82,7 +82,7 @@
   
   <!-- SDK Mercado Pago -->
   <script src="https://sdk.mercadopago.com/js/v2"></script>
-  <script src="server.js"></script>
+  <script src="mercadoPago.js"></script>
 </head>
 <body>
   <!-- Fundo com imagens temáticas -->
@@ -283,5 +283,6 @@
   <script src="js/calculator.js"></script>
   <script src="js/mercadoPago.js"></script>
   <script src="js/main.js"></script>
+  <script src="server.js"></script>
 </body>
 </html>
