--- a/Nutri-Facil/Código-Principal/index.html
+++ b/Nutri-Facil/Código-Principal/index.html
@@ -97,7 +97,7 @@
   <div class="main-content">
     <div class="container py-5">
       <div class="calculator-card">
-        <h1 class="mb-4 text-center">Calculadora de Dieta</h1>
+        <h1 class="mb-4 text-center">Nutri Facil - Calculadora de Dieta</h1>
         <form id="diet-form">
           <div class="row g-3">
             <div class="col-md-4">
