--- a/Nutri-Facil/Código-Principal/index.html
+++ b/Nutri-Facil/Código-Principal/index.html
@@ -24,7 +24,7 @@
   <div class="main-content">
     <div class="container py-5">
       <div class="calculator-card">
-        <h1 class="mb-4 text-center">Nutri Facil - Calculadora de Dieta</h1>
+        <h1 class="mb-4 text-center">Nutri Fácil - Calculadora de Dieta</h1>
         <form id="diet-form">
           <div class="row g-3">
             <div class="col-md-4">
@@ -39,17 +39,17 @@
             </div>
 
             <div class="col-md-4">
-              <label for="peso" class="form-label">Peso (kg)</label>
+              <label for="peso" class="form-label">Peso (Kg)</label>
               <input type="number" class="form-control" id="peso" required min="30" max="300">
             </div>
 
             <div class="col-md-4">
-              <label for="altura" class="form-label">Altura (cm)</label>
+              <label for="altura" class="form-label">Altura (Cm)</label>
               <input type="number" class="form-control" id="altura" required min="100" max="250">
             </div>
 
             <div class="col-md-4">
-              <label for="idade" class="form-label">Idade (anos)</label>
+              <label for="idade" class="form-label">Idade (Anos)</label>
               <input type="number" class="form-control" id="idade" required min="12" max="120">
             </div>
 
@@ -72,7 +72,7 @@
             </div>
 
             <div class="col-md-4">
-              <label for="nivel" class="form-label">Nível de Condicionamento Físico:</label>
+              <label for="nivel" class="form-label">Nível de Condicionamento Físico</label>
               <select class="form-control" id="nivel" required>
                 <option value="" disabled selected>Selecione seu nível</option>
                 <option value="Iniciante">Iniciante (0-6 meses de treino)</option>
